fix: overflow, update text size of p

--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -11,7 +11,8 @@
     /* border: 1px solid black; */
   }
 
-  html, body {
+  html,
+  body {
     @apply max-w-full;
     height: -webkit-fill-available;
   }
@@ -38,6 +39,7 @@
   }
 
   p {
-    @apply text-base font-medium text-text-color text-justify;
-  } 
+    @apply text-base md:text-lg font-medium text-text-color text-justify;
+  }
 }
+
